--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "earth-scope",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "earthscope",
+  "version": "1.0.0",
+  "description": "A React app to explore country data using the REST Countries API.",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
+  "keywords": [
+    "react",
+    "countries",
+    "api"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.1"
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.27.0"
   }
 }
