--- a/package.json
+++ b/package.json
@@ -17,13 +17,27 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-router-dom": "^5.2.0"
+    "axios": "^1.9.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.99.7",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
-    "eslint": "^7.14.0",
-    "eslint-plugin-react": "^7.27.0"
+    "eslint": "^9.26.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
