--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
-    "eslint": "^9.26.0"
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.26.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5"
   },
   "browserslist": {
     "production": [
