--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
+    "jest": "^27.5.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5"
   },
