--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.21.2",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1"
   },
